; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/netmap/extr_netmap_freebsd.c_nm_vi_get_index.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/netmap/extr_netmap_freebsd.c_nm_vi_get_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32*, i32 }

@nm_vi_indices = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@NM_VI_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @nm_vi_get_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nm_vi_get_index() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @mtx_lock(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nm_vi_indices, i32 0, i32 2))
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nm_vi_indices, i32 0, i32 0), align 8
  %4 = load i64, i64* @NM_VI_MAX, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  br label %13

7:                                                ; preds = %0
  %8 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nm_vi_indices, i32 0, i32 1), align 8
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nm_vi_indices, i32 0, i32 0), align 8
  %10 = add nsw i64 %9, 1
  store i64 %10, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nm_vi_indices, i32 0, i32 0), align 8
  %11 = getelementptr inbounds i32, i32* %8, i64 %9
  %12 = load i32, i32* %11, align 4
  br label %13

13:                                               ; preds = %7, %6
  %14 = phi i32 [ -1, %6 ], [ %12, %7 ]
  store i32 %14, i32* %1, align 4
  %15 = call i32 @mtx_unlock(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nm_vi_indices, i32 0, i32 2))
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
